Bug 983296 - Right align values in numerical columns in netmonitor. r=jdescottes,devtools-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D273738

UltraBlame original commit: 972dfb7c8699d0b83965a003835330e2c3735446

--- a/devtools/client/netmonitor/src/assets/styles/RequestList.css
+++ b/devtools/client/netmonitor/src/assets/styles/RequestList.css
@@ -1147,6 +1147,28 @@ inline
 block
 ;
 }
+.
+requests
+-
+list
+-
+column
+.
+requests
+-
+list
+-
+number
+-
+column
+{
+text
+-
+align
+:
+end
+;
+}
 /
 *
 Requests
